--- a/jasmine/jasmine-standalone-3.8.0/src/index.html
+++ b/jasmine/jasmine-standalone-3.8.0/src/index.html
@@ -4,7 +4,11 @@
         <title>Connections</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="index.css" rel="stylesheet" />
+        <link href="./index.css" rel="stylesheet" />
+    
+        <!-- include source files here... -->
+        <script src="index.js"></script>
+
     </head>
     <body>
         <header>
@@ -20,19 +24,18 @@
             <!-- email input -->
             <!-- phone number input -->
             <!-- Save button -->
-            <div id="connections-form">
-                <form>
-                    <label for="name_input">Name</label>
-                    <input name="name_input" type="text" value="" />
+            <div id="form-container">
+                <form id="connections-form">
+                    <!-- <label for="name_input">Name</label> -->
+                    <input name="name_input" type="text" value="" placeholder="Name" />
                     <br />
-                    <label for="email_input">Email</label>
-                    <input name="email_input" type="email" value="" />
+                    <!-- <label for="email_input">Email</label> -->
+                    <input name="email_input" type="email" value="" placeholder="Email" />
                     <br />
-                    <label for="phone_input">Phone</label>
+                    <!-- <label for="phone_input">Phone</label> -->
                     <input name="phone_input" type="tel" value="" placeholder="Optional" />
                     <br />
-                    <label></label>
-                    <button class="save-btn">Save Connection</button>
+                    <a href="#" class="btn save-btn">Save Connection</a>
                 </form>
             </div>
             <div class="connections-list">
