Fix tests and modify index js

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -36,15 +36,15 @@
       <div id="form-container">
           <form id="connections-form">
               <!-- <label for="name_input">Name</label> -->
-              <input name="name_input" type="text" value="" placeholder="Name" />
+              <input name="name" type="text" value="" placeholder="Name" />
               <br />
               <!-- <label for="email_input">Email</label> -->
-              <input name="email_input" type="email" value="" placeholder="Email" />
+              <input name="email" type="email" value="" placeholder="Email" />
               <br />
               <!-- <label for="phone_input">Phone</label> -->
-              <input name="phone_input" type="tel" value="" placeholder="Optional" />
+              <input name="phone" type="tel" value="" placeholder="Optional" />
               <br />
-              <a href="#" class="btn save-btn">Save Connection</a>
+              <a href="#" class="save-btn">Save Connection</a>
           </form>
       </div>
       <div class="connections-list">
