Setup button to save connections to localStorage

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -42,7 +42,7 @@
               <input name="email" type="email" value="" placeholder="Email" />
               <br />
               <!-- <label for="phone_input">Phone</label> -->
-              <input name="phone" type="tel" value="" placeholder="Optional" />
+              <input name="phone" type="tel" value="" placeholder="Phone" />
               <br />
               <a href="#" class="save-btn">Save Connection</a>
           </form>
