Add tests and functions for rendering connections

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -47,7 +47,7 @@
               <a href="#" class="save-btn">Save Connection</a>
           </form>
       </div>
-      <div class="connections-list">
+      <div class="connections-list-container">
           <!-- saved connections show here -->
       </div>
   </main>
