Fix render function to overwrite list on dom

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -49,6 +49,9 @@
       </div>
       <div class="connections-list-container">
           <!-- saved connections show here -->
+          <ul class="connections-list">
+              
+          </ul>
       </div>
   </main>
   <script type="text/javascript" src="index.js"></script>
