Switch from localStorage to indexedDB, remove uneeded files

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -44,13 +44,13 @@
               <!-- <label for="phone_input">Phone</label> -->
               <input name="phone" type="tel" value="" placeholder="Phone" />
               <br />
-              <a href="#" class="save-btn">Save Connection</a>
+              <a class="btn save-btn">Save Connection</a>
           </form>
       </div>
       <div class="connections-list-container">
           <!-- saved connections show here -->
+          <a class="btn remove-btn">Clear all Connections</a>
           <ul class="connections-list">
-              
           </ul>
       </div>
   </main>
