--- a/jasmine/jasmine-standalone-3.8.0/src/index.html
+++ b/jasmine/jasmine-standalone-3.8.0/src/index.html
@@ -34,8 +34,12 @@
                     <a href="#" class="btn save-btn">Save Connection</a>
                 </form>
             </div>
-            <div class="connections-list">
+            <button href="#" class="btn remove-btn">Remove Connections</button>
+            <div class="connections-list-container">
                 <!-- saved connections show here -->
+                <ul class="connections-list">
+
+                </ul>
             </div>
         </main>
         <script type="text/javascript" src="index.js"></script>
