--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -3,7 +3,9 @@
   <title>Connections</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Open+Sans:ital,wght@1,600&family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
   <link href="src/index.css" rel="stylesheet" />
   <link rel="shortcut icon" type="image/png" href="lib/jasmine-3.8.0/jasmine_favicon.png">
   <link rel="stylesheet" href="lib/jasmine-3.8.0/jasmine.css">
@@ -50,8 +52,9 @@
       <div class="connections-list-container">
           <!-- saved connections show here -->
           <a class="btn remove-btn">Clear all Connections</a>
-          <ul class="connections-list">
-          </ul>
+          <div class="connections-list">
+              
+          </div>
       </div>
   </main>
   <script type="text/javascript" src="index.js"></script>
