Refactor dom selectors into module

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -37,20 +37,20 @@
       <div id="form-container">
           <form id="connections-form">
               <!-- <label for="name_input">Name</label> -->
-              <input name="name" type="text" value="" placeholder="Name" />
+              <input class="name" name="name" type="text" value="" placeholder="Name" />
               <br />
               <!-- <label for="email_input">Email</label> -->
-              <input name="email" type="email" value="" placeholder="Email" />
+              <input class="email" name="email" type="email" value="" placeholder="Email" />
               <br />
               <!-- <label for="phone_input">Phone</label> -->
-              <input name="phone" type="tel" value="" placeholder="Phone" />
+              <input class="phone" name="phone" type="tel" value="" placeholder="Phone" />
               <br />
-              <a class="btn save-btn">Save Connection</a>
+              <button class="btn save-btn">Save Connection</button>
           </form>
       </div>
       <div class="connections-list-container">
           <!-- saved connections show here -->
-          <a class="btn remove-btn">Clear all Connections</a>
+          <button class="btn remove-btn">Clear all Connections</button>
           <div class="connections-list">
               
           </div>
