Refactor functions, modify styles

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -50,9 +50,8 @@
       </div>
       <div class="connections-list-container">
           <!-- saved connections show here -->
-          <button class="btn remove-btn">Clear all Connections</button>
+          <button class="btn remove-btn">Clear all connections</button>
           <div class="connections-list">
-              
           </div>
       </div>
   </main>
