Remove commented out code

--- a/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-3.8.0/SpecRunner.html
@@ -29,11 +29,6 @@
       <!-- smaller handshake: <p>&#129309;</p> -->
   </header>
   <main>
-      <!-- Form for storing connections -->
-      <!-- name input -->
-      <!-- email input -->
-      <!-- phone number input -->
-      <!-- Save button -->
       <div id="form-container">
           <form id="connections-form">
               <!-- <label for="name_input">Name</label> -->
@@ -49,9 +44,9 @@
           </form>
       </div>
       <div class="connections-list-container">
-          <!-- saved connections show here -->
           <button class="btn remove-btn">Clear all connections</button>
           <div class="connections-list">
+              <!-- connection cards display here -->
           </div>
       </div>
   </main>
