--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,16 @@
       <div id="form-container">
           <form id="connections-form">
               <!-- <label for="name_input">Name</label> -->
-              <input class="name" name="name" type="text" value="" placeholder="Name" />
+              <p class="input-error"></p>
+              <input class="name" name="name" type="text" placeholder="Name" minlength="2" />
               <br />
               <!-- <label for="email_input">Email</label> -->
-              <input class="email" name="email" type="email" value="" placeholder="Email" />
+              <input class="email" name="email" type="email" placeholder="Email" />
               <br />
               <!-- <label for="phone_input">Phone</label> -->
-              <input class="phone" name="phone" type="tel" value="" placeholder="Phone" />
+              <input class="phone" name="phone" type="tel" placeholder="Phone" />
               <br />
-              <button class="btn save-btn">Save Connection</button>
+              <button class="btn save-btn" type="submit">Save Connection</button>
           </form>
       </div>
       <div class="connections-list-container">
