Setup error message for each empty input

--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,15 @@
       <div id="form-container">
           <form id="connections-form">
               <!-- <label for="name_input">Name</label> -->
-              <p class="input-error"></p>
+              <p class="name-input-error"></p>
               <input class="name" name="name" type="text" placeholder="Name" minlength="2" />
               <br />
               <!-- <label for="email_input">Email</label> -->
+              <p class="email-input-error"></p>
               <input class="email" name="email" type="email" placeholder="Email" />
               <br />
               <!-- <label for="phone_input">Phone</label> -->
+              <p class="phone-input-error"></p>
               <input class="phone" name="phone" type="tel" placeholder="Phone" />
               <br />
               <button class="btn save-btn" type="submit">Save Connection</button>
