Remove white space from form, modify error styles

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
               <br />
               <!-- <label for="email_input">Email</label> -->
               <p class="email-input-error"></p>
-              <input class="email" name="email" type="email" placeholder="Email" />
+              <input class="email" name="email" type="mail" placeholder="Email" />
               <br />
               <!-- <label for="phone_input">Phone</label> -->
               <p class="phone-input-error"></p>
